--- a/plaza/ParqueLosPajaritos.html
+++ b/plaza/ParqueLosPajaritos.html
@@ -24,16 +24,19 @@
 			<li>
 				<img src="imagenes/plp.png" alt="">
 				<section class="flex-caption">
+					<p>Parque Los Pajaritos</p>
 				</section>
 			</li>
 			<li>
 				<img src="imagenes/plp2.png" alt=>
 				<section class="flex-caption">
+					<p>Parque Los Pajaritos</p>
 				</section>
 			</li>
 			<li>
 				<img src="imagenes/plp3.png" alt="">
 				<section class="flex-caption">
+					<p>Parque Los Pajaritos</p>
 				</section>
 			</li>
 		</ul>
@@ -53,8 +56,12 @@
 	<a href = "../index.html"><img class = "hamburguer2" src ="imagenes/Salir.svg" alt=""></a>
 	<a class="enlace" href="https://www.google.com.mx/maps/place/Parque+Los+Pajaritos/@17.9902579,-92.9198651,17z/data=!4m14!1m8!3m7!1s0x85edd837810380eb:0xf9c855aedf9f5ecb!2sParque+
 	Los+Pajaritos!8m2!3d17.9902579!4d-92.9198651!14m1!1BCgIgAQ!3m4!1s0x85edd837810380eb:0xf9c855aedf9f5ecb!8m2!3d17.9902579!4d-92.9198651?hl=es&authuser=0"><img class ="hamburguer3" src="imagenes/Buscar.svg"></a>
-    
-	<img src="imagenes/croquis2.jpg" width="100%">
+    	
+	<div class="croquis">
+		<center>
+			<img src="imagenes/croquis2.jpg" width="70%">
+		</center>
+	</div>
 
 </body>
 </html>
