--- a/plaza/PlazaArmas.html
+++ b/plaza/PlazaArmas.html
@@ -51,7 +51,12 @@
 
 	<a href = "../index.html"><img class = "hamburguer2" src ="imagenes/Salir.svg" alt=""></a>
 	<a class="enlace" href="https://www.bing.com/maps?q=plaza+de+armas+villahermosa+tabasco&FORM=HDRSC6"><img class ="hamburguer3" src="imagenes/Buscar.svg"></a>
-
-	<img src="imagenes/PlazaArmaCro.PNG" width="100%">
+	
+	<div class="croquis">
+		<center>
+			<img src="imagenes/PlazaArmaCro.PNG" width="70%">
+		</center>
+	</div>
+	
 </body>
 </html>
