--- a/plaza/PlazaBic.html
+++ b/plaza/PlazaBic.html
@@ -43,6 +43,11 @@
 	<a href = "../index.html"><img class = "hamburguer2" src ="imagenes/Salir.svg" alt=""></a>
 	<a class="enlace" href="https://www.bing.com/maps?q=plaza+bicentenario+villahermosa+tabasco&FORM=HDRSC6"><img class ="hamburguer3" src="imagenes/Buscar.svg"></a>
     
-	<img src="imagenes/BicentenarioCro.PNG" width = "100%">
+	<div class="croquis">
+		<center>
+			<img src="imagenes/BicentenarioCro.PNG" width = "70%">
+		</center>
+	</div>
+
 </body>
 </html>
