--- a/plaza/centroH.html
+++ b/plaza/centroH.html
@@ -52,6 +52,11 @@
 	<a href = "../index.html"><img class = "hamburguer2" src ="imagenes/Salir.svg" alt=""></a>
 	<a class="enlace" href="https://goo.gl/maps/uCkg3rFLLXpu8jHw9"><img class ="hamburguer3" src="imagenes/Buscar.svg"></a>
     
-	<img src="imagenes/croquisCH.jpeg" width="100%">
+	<div class="croquis">
+		<center>
+			<img src="imagenes/croquisCH.jpeg" width="100%">
+		</center>
+	</div>
+
 </body>
 </html>
