--- a/plaza/parqueLaPaz.html
+++ b/plaza/parqueLaPaz.html
@@ -24,16 +24,19 @@
 			<li>
 				<img src="imagenes/plpa.png" alt="">
 				<section class="flex-caption">
+					<p>Parque la paz</p>
 				</section>
 			</li>
 			<li>
 				<img src="imagenes/plpa2.png" alt=>
 				<section class="flex-caption">
+					<p>Parque la paz</p>
 				</section>
 			</li>
 			<li>
 				<img src="imagenes/plpa3.png" alt="">
 				<section class="flex-caption">
+					<p>Parque la paz</p>
 				</section>
 			</li>
 		</ul>
@@ -53,7 +56,13 @@
 	<a class="enlace" href="https://www.google.com.mx/maps/place/Parque+la+Paz/@17.9947357,-92.9166029,16z
 	/data=!4m9!1m2!2m1!1sparque+la+paz!3m5!1s0x85edd84769464c73:0x45d161afe5b54124!8m2!3d17.9947357!4d-92.9166029!15sCg
 	1wYXJxdWUgbGEgcGF6kgEEcGFyaw?hl=es&authuser=0"><img class ="hamburguer3" src="imagenes/Buscar.svg"></a>
-    
-	<img src="imagenes/croquis3.jpeg" width="100%">
+    	
+	<div class="croquis">
+		<center>
+			<img src="imagenes/croquis3.jpeg" width="70%">
+		</center>
+	</div>
+
+	
 </body>
 </html>
