--- a/plaza/phidalgo.html
+++ b/plaza/phidalgo.html
@@ -51,8 +51,13 @@
 
 	<a href = "../index.html"><img class = "hamburguer2" src ="imagenes/Salir.svg" alt=""></a>
 	<a class="enlace" href="https://goo.gl/maps/No1rQwi5A1dNTciK8"><img class ="hamburguer3" src="imagenes/Buscar.svg"></a>
-
-	<img src="imagenes/croquisph.jpeg" width="100%">
+	
+	<div class="croquis">
+		<center>
+			<img src="imagenes/croquisph.jpeg" width="70%">
+		</center>
+	</div>
+	
 	
 </body>
 </html>
