--- a/plaza/plazuelaAguila.html
+++ b/plaza/plazuelaAguila.html
@@ -56,7 +56,12 @@
 	<a href = "../index.html"><img class = "hamburguer2" src ="imagenes/Salir.svg" alt=""></a>
 	<a class="enlace" href="https://goo.gl/maps/9NjGfXSqoYxeMn4w9"><img class ="hamburguer3" src="imagenes/Buscar.svg"></a>
 	
-	<img src="imagenes/croquispla.jpeg" width="100%">
+	<div class="croquis">
+		<center>
+			<img src="imagenes/croquispla.jpeg" width="70%">
+		</center>
+	</div>
+	
 	
 </body>
 </html>
