--- a/plaza/pqjuarez.html
+++ b/plaza/pqjuarez.html
@@ -53,7 +53,12 @@
 	<a class="enlace" href="https://www.google.com.mx/maps/place/Parque+Ju%C3%A1rez/@17.9910312,-92.9196992,17z/data=!3m1!4b1!4m5!3m4!1s0x85edd83807165e21:0x42e2fd9b04cb8368!8m2!3
 	d17.9910261!4d-92.9175105?hl=es&authuser=0"><img class ="hamburguer3" src="imagenes/Buscar.svg"></a>
 	
-	<img src="imagenes/croquis.jpg" width = "100%">
+	<div class="croquis">
+		<center>
+			<img src="imagenes/croquis.jpg" width = "70%">
+		</center>
+	</div>
+	
         
 </body>
 </html>
