--- a/index.html
+++ b/index.html
@@ -15,7 +15,7 @@
         <nav class="menu-navegacion">
                <div class="hed"><a href="#" class="texto">Ayuda</a></div> 
                <div class="hed"><a href="acercade.html" class="texto">Acerca de</a></div>
-               <div class="hed"><a href="#" class ="texto">Contactenos</a></div>        
+               <div class="hed"><a href="footer" class ="texto">Contactenos</a></div>        
         </nav>
         <div class="contenedor head">
             <h1 class="titulo">Ubica tu plaza o parque </h1>
