--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@
     <header class="header" id="inicio">
         <img class="hamburguer" src="img/menu.svg" alt="">
         <nav class="menu-navegacion">
-               <div class="hed"><a href="#" class="texto">Ayuda</a></div> 
+               <div class="hed"><a href="https://drive.google.com/file/d/1yYpiJqTsYEkL1FuL1rMmlIQM88CwbwM_/view?usp=sharing" class="texto">Ayuda</a></div> 
                <div class="hed"><a href="acercade.html" class="texto">Acerca de</a></div>
                <div class="hed"><a href="#footer" class ="texto">Contactenos</a></div>        
         </nav>
